compiler/actonc/test/typeerrors/ex21.act
import math

actor main(env):
   print(math.sin("hej"))
   env.exit(0)
   
