compiler/actonc/test/typeerrors/ex21.golden
Building file test/typeerrors/ex21.act
  Compiling ex21.act for development

ERROR: Error when compiling ex21 module: Type error

  |
4 |   print(math.sin("hej"))
  |         ^^^^^^^^^^^^^^^
The type of the indicated expression (inferred to be __builtin__.str) must be a subclass of __builtin__.float

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

